--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <google-clients.version>1.22.0</google-clients.version>
     <guava.version>20.0</guava.version>
     <hamcrest.version>1.3</hamcrest.version>
-    <jackson.version>@jackson.version@</jackson.version>
+    <jackson.version>2.8.11</jackson.version>
     <joda.version>2.4</joda.version>
     <junit.version>4.12</junit.version>
     <maven-compiler-plugin.version>3.6.2</maven-compiler-plugin.version>
@@ -250,6 +250,12 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
   </dependencies>
 </project>
